@@ -8,6 +8,8 @@ CHANGE LOG
 
 v0.8 -
 	- Internal code changes.
+	- Trunks show native VLAN (if mismatched then both P and C will be displayed)
+	- Trunks show allowed VLANs (if mismatched then both P and C will be displayed) (standard range only)
 
 v0.7 - 7/25/2015
 	graph
